# RAGAgent

./: .dockerignore  .env.docker  .gitignore  CLAUDE.md  Dockerfile  README.md  REAME.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  start.py  stop.py  test_git_worker.py
.claude/: settings.local.json
backend/: .env  Dockerfile  README.md  auth_service.py  config.py  database.py  main.py  models.py  pyproject.toml  ragagent.db  requirements.txt  run.bat  schemas.py
backend/core/: celery.py  database.py
backend/models/: __init__.py  chat.py  repository.py  session.py  types.py  user.py  vector.py
backend/routers/: auth.py  chat.py  repository.py
backend/schemas/: __init__.py  chat.py  repository.py  user.py
backend/scripts/: add_error_message_column.py  add_file_count_column.py
backend/services/: auth_service.py  chat_service.py  password_service.py  repository_service.py  session_service.py  token_service.py  user_service.py
backend/src/chat/: chat.py
backend/src/file_flag/: file_flag.py
backend/src/sample/: __init__.py  sample.py
backend/src/task_queue/: __init__.py  task_queue.py
backend/src/vectorDB/: README.md  make_total_json.py  vectorDB.py
docs/: README.md  developer-guide-advanced.md  installation.md  sdk-usage.md
free/: README.md  js_parse1.py  parse_json.py  parser.js
frontend/: Dockerfile  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  run.bat  run.sh
gateway/: Dockerfile  README.md  config.py  main.py  pyproject.toml  run.bat  schemas.py
git-agent/: README.md  config.py  main.py  task.flag.json
git-agent2/: github_track.py  load_json_files.py
git-agent3/: README.md  config.py  main.py  task.flag.json
milvus/: Docker_Guide.md  start_milvus.sh
milvus_docker/: create_collection.py  delete_collection.py  delete_entity.py  docker-compose.yml  embedding.py  list_collections.py  main.json  milvus_Sample.py  view_entities.py
rag_worker/: Dockerfile  README.md  __init__.py  celery_app.py  db_helper.py  main.py  pyproject.toml  tasks.py
rag_worker/LLM_API/: LLM.py  prompt.py
rag_worker/ask_question/: README.md  __init__.py  ask_question.py  exceptions.py  prompt_generator.py  service.py  types.py
rag_worker/git_service/: README.md  __init__.py  exceptions.py  history_tracker.py  service.py  types.py
rag_worker/python_parser/: README.md  __init__.py  exceptions.py  file_scanner.py  parser.py  service.py  types.py
rag_worker/vector_db/: README.md  __init__.py  chains.py  collection_manager.py  config.py  db_utils.py  embedding_service.py  exceptions.py  main.py  repository_embedder.py  search_service.py  service.py  test_data.json  test_data_test.json  types.py
rag_worker/vector_db/milvus/: Docker_Guide.md  install_milvus.sh
rag_worker/vector_db/utils/: config.py
ragit_sdk/: README.md  __init__.py  check_milvus.py  cli.py  config.py  docker_manager.py  logger.py  process_manager.py  test_git_worker.py  test_search_only.py  utils.py
scripts/: __init__.py  docker_manager.py  process_manager.py
vectorDB/: CodeBERT_Chroma.py  CodeT5_Chroma.py  README.md  connection_test.py  (+3 more)
(+484 files in other folders)
